# lamberto

./: .gitignore  Cargo.toml  LICENSE  README.md  test_config.yaml
.github/workflows/: ci.yml  release.yml
assets/: de440-shorter.bsp
src/: bodies.rs  config.rs  error.rs  lib.rs  main.rs  output.rs  scan.rs  transfer.rs
tests/: edge_cases.rs  mars_2026_validation.rs  multi_opportunity_validation.rs
tests/common/: mod.rs
